--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+latte-dock (0.9.11+nitrux+git+0.9.12+0.0.2) nitrux; urgency=medium
+
+  * Create package.
+
+ -- Uri Hererra <uri_herrera@nxos.org>  Fri, 11 Jun 2021 22:56:00 -0500
+
 latte-dock (0.9.11+nitrux+git+0.9.12) nitrux; urgency=medium
 
   * Create package.
