--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+latte-dock (0.10.75+0.0.1+nitrux+git) nitrux; urgency=medium
+
+  * Update package.
+
+ -- Uri Hererra <uri_herrera@nxos.org>  Fri, 1209 Jun 2021 13:17:00 -0500
+
 latte-dock (0.9.12+0.0.4+nitrux+git) nitrux; urgency=medium
 
   * Create package.
