--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+latte-dock (0.11.0+nitrux+git) nitrux; urgency=medium
+
+  * Update package.
+
+ -- Uri Hererra <uri_herrera@nxos.org>  Thu, 28 Dec 2021 05:35:00 -0500
+
 latte-dock (0.10.200+0.0.1+nitrux+git) nitrux; urgency=medium
 
   * Update package.
