--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+latte-dock (0.10.800+nitrux+git) nitrux; urgency=medium
+
+  * Update package.
+
+ -- Uri Hererra <uri_herrera@nxos.org>  Wed, 23 Feb 2021 21:40:00 -0500
+
 latte-dock (0.10.600+nitrux+git) nitrux; urgency=medium
 
   * Update package.
