--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+latte-dock (0.10.801+nitrux+git) nitrux; urgency=medium
+
+  * Update package.
+
+ -- Uri Hererra <uri_herrera@nxos.org>  Thu, 14 Apr 2022 17:04:00 -0500
+
 latte-dock (0.10.800+nitrux+git) nitrux; urgency=medium
 
   * Update package.
